[gd_scene load_steps=11 format=3 uid="uid://bijf4gt4282nb"]

[ext_resource type="Script" path="res://src/main/component/Scripts/atmosphere_system.gd" id="1_0mwit"]
[ext_resource type="Shader" path="res://src/main/etc/shader/rain_and_snow.gdshader" id="2_ukpg7"]
[ext_resource type="Shader" path="res://src/main/etc/shader/2d_fog.gdshader" id="3_7tdbk"]
[ext_resource type="Texture2D" uid="uid://lstsn4xus311" path="res://src/main/etc/shader/fog_noise/fog_noise.png" id="4_g6xai"]
[ext_resource type="Shader" path="res://src/main/etc/shader/god_rays.gdshader" id="5_t4bv2"]

[sub_resource type="Gradient" id="Gradient_b0qrj"]
offsets = PackedFloat32Array(0, 0.333, 0.383459, 0.430451, 0.458647, 0.5, 0.833, 0.887218, 0.930451, 0.964286, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.862745, 0.870588, 1, 0.984314, 0.592157, 0.607843, 1, 0.960784, 0.454902, 0.67451, 1, 0.431373, 0.192157, 0.568627, 1, 0.176471, 0.180392, 0.333333, 1, 0.176471, 0.180392, 0.333333, 1, 0.431373, 0.192157, 0.568627, 1, 0.960784, 0.454902, 0.67451, 1, 0.984314, 0.592157, 0.607843, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e36s0"]
gradient = SubResource("Gradient_b0qrj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_thl8j"]
resource_local_to_scene = true
shader = ExtResource("2_ukpg7")
shader_parameter/alpha = 0.0
shader_parameter/rain = true
shader_parameter/rain_amount = 200.0
shader_parameter/near_rain_length = 0.2
shader_parameter/far_rain_length = 0.1
shader_parameter/near_rain_width = 0.57
shader_parameter/far_rain_width = 0.325
shader_parameter/near_rain_transparency = 1.0
shader_parameter/far_rain_transparency = 0.451
shader_parameter/rain_color = Color(0.8, 0.8, 0.8, 1)
shader_parameter/base_rain_speed = 0.5
shader_parameter/additional_rain_speed = 0.5
shader_parameter/slant = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wy5xu"]
resource_local_to_scene = true
shader = ExtResource("3_7tdbk")
shader_parameter/alpha = 0.0
shader_parameter/density = 0.25
shader_parameter/speed = Vector2(0.02, 0.01)
shader_parameter/scale = 4.0
shader_parameter/noise_texture = ExtResource("4_g6xai")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b0o8o"]
resource_local_to_scene = true
shader = ExtResource("5_t4bv2")
shader_parameter/alpha = 0.0
shader_parameter/angle = -0.1
shader_parameter/position = 0.01
shader_parameter/spread = 0.3
shader_parameter/cutoff = 0.03
shader_parameter/falloff = 0.99
shader_parameter/edge_fade = 0.4
shader_parameter/speed = 3.0
shader_parameter/ray1_density = 16.0
shader_parameter/ray2_density = 43.0
shader_parameter/ray2_intensity = 0.429
shader_parameter/color = Color(1, 0.9, 0.65, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[node name="AtmosphereSystem" type="Node"]
script = ExtResource("1_0mwit")
gradient = SubResource("GradientTexture1D_e36s0")
wait_time = 15.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 216.0
offset_top = 192.0
offset_right = 254.0
offset_bottom = 223.0
text = "test"

[node name="Button2" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 317.0
offset_top = 192.0
offset_right = 364.0
offset_bottom = 223.0
text = "test2"

[node name="Combined" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="RainAndSnow" type="ColorRect" parent="CanvasLayer/Combined"]
self_modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_thl8j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer/Combined"]
layer = 2

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/Combined/ParallaxBackground"]
motion_mirroring = Vector2(640, 360)

[node name="Fog" type="ColorRect" parent="CanvasLayer/Combined/ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_wy5xu")
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sunny" type="ColorRect" parent="CanvasLayer/Combined"]
material = SubResource("ShaderMaterial_b0o8o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Strobe" type="ColorRect" parent="CanvasLayer/Combined"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Timer" type="Timer" parent="."]

[node name="StrobeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RandWeatherTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RandWeatherTimer" to="." method="_on_rand_weather_timer_timeout"]
